# finance_ebook

./: .env.example  .gitignore  AGENTS.md  Justfile  README.md  book.toml  flake.nix  pyproject.toml
.gemini/: system.md
ebook/: README.md  SUMMARY.md
prompts/: extract.md
src/finance_ebook/: __init__.py  __main__.py  cli.py
