[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-ebook"
version = "0.1.0"
description = "Generate a finance mdBook from daily transcript JSON files."
readme = "ebook/README.md"
requires-python = ">=3.11"
dependencies = ["tqdm>=4.66"]

[project.scripts]
finance-ebook = "finance_ebook.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
